# fpm

./: .gitignore  CMakeLists.txt  README.md
include/fpm/: config.h  error.h  fpm.h  input.h  render.h  shaders.h  utils.h
res/shaders/: fragment_shader.frag  vertex_shader.vert
src/: main.c
src/fpm/: config.c  error.c  fpm.c  input.c  render.c  shaders.c  utils.c
